tests/snapshots/test_runner__tests__compiler__typecheck__type_annotation_function_return_type_1.kk.snap
---
source: tests/test_runner.rs
expression: stripped_actual_output.trim()
---
============
INPUT
============
let f = \(x): Number => true

============
EXIT CODE
============
1

============
STDOUT
============


============
STDERR
============
error:
  ┌─ tests/compiler/typecheck/type_annotation_function_return_type_1.kk:1:25
  │
1 │ let f = \(x): Number => true
  │                         ^^^^ Type mismatch
  │
  = +---------------+-------------+
    | EXPECTED TYPE | ACTUAL TYPE |
    +---------------+-------------+
    | - Number      | + Boolean   |
    +---------------+-------------+
